fixed text field shift

--- a/frontend/src/component/pages/HomePage.scss
+++ b/frontend/src/component/pages/HomePage.scss
@@ -75,4 +75,8 @@
   .main {
     padding: 40px 0;
   }
+
+  .hidden {
+    visibility: hidden;
+  }
 }
